src/components/Home/style.css
/* section-hero */
.section-hero {
	height: 100vh;
}
.hero-heading {
	top: 20%;
	height: 70%;
}
.hero-main-text {
	font-size: 5rem;
	white-space: nowrap;
}
.hero-main-top-text {
	top: 2%;
}
.hero-main-bottom-text {
	bottom: 8%;
}
.text-transparent {
	-webkit-text-stroke: 2px var(--white);
	color: transparent;
}
.hero-main-middle {
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
}
.hero-main-middle-image {
	width: 350px;
	aspect-ratio: 3/4;
	overflow: hidden;
}
.hero-image {
	width: 100%;
	height: 100%;
	background-position: center;
	background-size: cover;
	background-repeat: no-repeat;
	background-image: url('/src/images/profile.jpg');
}
.marquee-container {
	width: 120%;
	left: -5rem;
	top: 50%;
	padding: 0.8rem;
	white-space: nowrap;
	color: var(--black);
	z-index: -1;
}
.marquee-1 {
	transform: rotate(5deg);
	background-color: var(--green);
}
.marquee-2 {
	transform: rotate(-7deg);
	background-color: var(--yellow);
}
.marquee-slide {
	display: inline-block;
	animation: scroll 10s linear infinite;
}
.marquee-2 .marquee-slide {
	animation-direction: reverse;
}
.marquee-text {
	display: inline-block;
	padding: 0 1.5rem;
	font-size: 1rem;
	font-weight: 500;
	text-transform: uppercase;
}
@keyframes scroll {
	0% {
		transform: translateX(0);
	}
	100% {
		transform: translateX(-100%);
	}
}
@media only screen and (max-width: 575px) {
	.hero-main-text {
		font-size: 3.5rem;
	}
	.hero-main-top-text {
		top: 15%;
	}
	.hero-main-bottom-text {
		bottom: 15%;
	}
	.hero-main-middle-image {
		min-width: 180px;
		max-width: 250px;
	}
	.marquee-container {
		width: 150%;
	}
	.marquee-1 {
		transform: rotate(10deg);
	}
	.marquee-2 {
		transform: rotate(-10deg);
	}
}
@media only screen and (min-width: 768px) {
	.hero-main-text {
		font-size: 7.2rem;
	}
	.hero-main-top-text {
		top: 1%;
	}
	.hero-main-bottom-text {
		bottom: 0%;
	}
	.hero-main-middle-image {
		width: 400px;
	}
	.marquee-text {
		font-size: 1.2rem;
	}
}
@media only screen and (min-width: 992px) {
	.hero-main-text {
		font-size: 9rem;
	}
	.hero-main-top-text {
		top: -5%;
	}
	.hero-main-middle-image {
		width: 450px;
	}
}
@media only screen and (min-width: 1200px) {
	.hero-main-top-text {
		top: -7%;
	}
	.hero-main-bottom-text {
		bottom: -11%;
	}
	.hero-main-middle-image {
		width: 450px;
	}
	.marquee-text {
		font-size: 1.5rem;
	}
}
@media only screen and (min-width: 1400px) {
	.hero-main-text {
		font-size: 11rem;
	}
	.hero-main-top-text {
		top: -18%;
	}
	.hero-main-bottom-text {
		bottom: -15%;
	}
	.hero-main-middle-image {
		width: 500px;
	}
	.marquee-text {
		font-size: 1.8rem;
	}
}
/* section intro */
.section-intro {
	height: 200vh;
}
.sticky-section-intro {
	top: 0;
	height: 100vh;
}
.section-intro-text {
	width: 80%;
	font-size: 5.5vw;
	font-weight: 700;
	left: 50%;
	top: 50%;
	transform: translate(-50%, -50%);
	line-height: 1.2;
}
.section-intro-text-transparent {
	color: transparent;
	-webkit-text-stroke: 2px var(--black);
}
.section-intro-circle {
	transform: translate(-50%, -50%);
	left: 50%;
	top: 50%;
	aspect-ratio: 1;
	border-radius: 50%;
	background-color: var(--yellow);
}
.section-intro-title {
	font-size: 1.5vw;
	color: var(--black);
	top: 85%;
	transform: translate(-50%, -50%);
	left: 50%;
}

